--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                 </div>
 
                 <div class="footer">
-                 <div  style="">
-                    <span> <i class="fa fa-phone" aria-hidden="true" style="background-color: #C3D5DF; padding: 5px 8px 5px 8px; border-radius: 70px;"></i>  +94 773973070</span>
-
-                    <span style="margin-left: auto;"> <i class="fa fa-envelope" aria-hidden="true" style="background-color: #C3D5DF; padding: 5px 6px 5px 6px; border-radius: 70px;"></i>  ask@adage.lk</span>
+                  <div>
+                     <span> <a class="fa fa-phone" href="https://api.whatsapp.com/send?phone=+94773973070" aria-hidden="true" style="background-color: #C3D5DF; color: black; text-decoration: none; padding: 5px 8px 5px 8px; border-radius: 70px;"></a>  +94 773973070</span>
+                     
+                     <span style="margin-left: auto;"> <a class="fa fa-envelope" href="mailto: ask@adage.lk" aria-hidden="true" style="background-color: #C3D5DF; color: black; text-decoration: none; padding: 5px 6px 5px 6px; border-radius: 70px;"></a>  ask@adage.lk</span>
+                  </div>
                  </div>
-                </div>
 
             </div>
         </div>
